# travillian-games

./: Makefile  docker-compose.yml
.claude/: settings.local.json
.docs/: 02-pland.md  03-task.md  04-rust-guide.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/pkg/firebase/: client.go
backend/internal/pkg/validator/: validator.go
backend/internal/server/request/: bind.go
backend/migrations/: 000001_init_schema.up.sql  000002_create_servers_tribes.down.sql  000002_create_servers_tribes.up.sql  000004_create_buildings_queue.down.sql  000004_create_buildings_queue.up.sql  000008_create_reports_messages.down.sql  000008_create_reports_messages.up.sql  000009_create_map_sessions.down.sql  000009_create_map_sessions.up.sql  000017_create_armies.down.sql  000017_create_armies.up.sql  000018_create_scout_reports.down.sql  000018_create_scout_reports.up.sql  000019_add_stationed_to_armies.down.sql  000019_add_stationed_to_armies.up.sql  000020_add_chief_troops.down.sql  000020_add_chief_troops.up.sql  000021_seed_chief_troops.down.sql  000021_seed_chief_troops.up.sql  000025_create_heroes.down.sql  000025_create_heroes.up.sql  000026_add_hero_slot_feature.down.sql  000026_add_hero_slot_feature.up.sql  000027_seed_hero_slot_cost.down.sql  000027_seed_hero_slot_cost.up.sql
backend/scripts/: init_db.go  migrate.go
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: postgres.rs  redis.rs
backend/src/error/: mod.rs
backend/src/handlers/: army.rs  building.rs  hero.rs  mod.rs  troop.rs  village.rs
backend/src/middleware/: mod.rs
backend/src/models/: army.rs  building.rs  hero.rs  mod.rs  shop.rs  troop.rs  village.rs
backend/src/repositories/: army_repo.rs  hero_repo.rs  mod.rs  troop_repo.rs  village_repo.rs
backend/src/services/: army_service.rs  background_jobs.rs  building_service.rs  hero_service.rs  mod.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/lib/api/: client.ts  ws.ts
frontend/src/lib/components/: LanguageSwitcher.svelte
frontend/src/lib/components/game/: ArmyList.svelte  BattleReportCard.svelte  BuildingSlot.svelte  MapTile.svelte  ScoutReportCard.svelte  StationedTroopsPanel.svelte  TroopSelector.svelte
frontend/src/lib/components/modals/: BuildMenuModal.svelte  BuildingDetailModal.svelte  RallyPointModal.svelte  ReportsModal.svelte  TileDetailModal.svelte
frontend/src/lib/components/modals/auth/: LoginModal.svelte  RegisterModal.svelte
frontend/src/lib/firebase/: config.ts
frontend/src/lib/i18n/: index.ts
frontend/src/lib/i18n/locales/: en.json  th.json
frontend/src/lib/stores/: army.ts  auth.ts  map.ts  troop.ts  village.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/game/: +layout.svelte
frontend/src/routes/game/map/: +page.svelte
frontend/src/routes/game/village/: +page.svelte
frontend/src/routes/onboarding/: +page.svelte
