[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Travillian Team"]
description = "Tusk & Horn - Travillian-style game server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# UUID & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9"

# HTTP client (for Firebase token verification)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Payment (Stripe)
stripe-rust = { package = "async-stripe", version = "0.41", default-features = false, features = ["runtime-tokio-hyper-rustls", "checkout"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
